--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-	"files.associations": {
-		"stdio.h": "c",
-		"stdlib.h": "c",
-		"libft.h": "c",
-		"so_long.h": "c",
-		"unistd.h": "c"
-	}
+	"C_Cpp.errorSquiggles": "disabled"
 }
