--- a/libft/Makefile
+++ b/libft/Makefile
@@ -9,8 +9,8 @@ SRC     =	ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_ispr
 			ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strrchr.c ft_tolower.c ft_toupper.c ft_atoi.c \
 			ft_strncmp.c ft_strnstr.c ft_strchr.c ft_strdup.c ft_substr.c ft_strjoin.c ft_calloc.c ft_split.c \
 			ft_strtrim.c ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
-			ft_strlen_GNL.c ft_strchr_GNL.c ft_chr_bakn_GNL.c ft_new_line_GNL.c ft_str_attach_GNL.c ft_memmove_GNL.c \
-			ft_memcpy_GNL.c get_next_line.c ft_exiting_prog.c RENE_GNL_UTILES.c RENE_GNL.c
+			ft_strlen_gnl.c ft_strchr_gnl.c ft_chr_bakn_gnl.c ft_new_line_gnl.c ft_str_attach_gnl.c ft_memmove_gnl.c \
+			ft_memcpy_gnl.c get_next_line.c ft_exiting_prog.c
 
 BONUS_SRC	=	ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c \
 				ft_lstiter.c ft_lstmap.c	
